Fix double border issue

--- a/src/component/virtualized/table/VirtualizedTable.scss
+++ b/src/component/virtualized/table/VirtualizedTable.scss
@@ -4,7 +4,7 @@
     border-spacing: 0;
     font-family: arial, sans-serif;
     table-layout: fixed;
-    width: 100%;
+    margin: 20px;
 
     thead {
         display: grid;
@@ -35,9 +35,17 @@
         padding: 8px 16px;
     }
 
+    th + th {
+        border-left: none;
+    }
+
     td {
         display: flex;
         padding: 4px 16px;
+    }
+
+    td + td {
+        border-left: none;
     }
 
     &__container {
